# cpp-battle-test

./: .gitignore  CMakeLists.txt  KNOWN_ISSUES.md
src/: main.cpp
src/App/: Application.cpp  Application.h  IFeature.h  IServiceProvider.h  IServiceRegister.h  ServiceProvider.cpp  ServiceProvider.h
src/Core/Ecs/: IStashProvider.h  ISystem.h  ISystemsRegister.h  Stash.h  World.cpp  World.h  WorldDomain.h
src/Core/Ecs/Components/: EntityMetaData.cpp  EntityMetaData.h
src/Features/MapManagement/: ILocationService.h  IMapService.h  MapManagementFeature.cpp  MapManagementFeature.h
src/Features/MapManagement/Componenents/: MapLocation.cpp  MapLocation.h
src/Features/Movement/: IMovementService.h  MovementFeature.cpp  MovementFeature.h
src/Features/Movement/Algorithms/: AStarAlgorithm.cpp  AStarAlgorithm.h
src/Features/Units/: ISkill.h  IUnitsDataProvider.h  IUnitsFactory.h  UnitTypes.h  UnitsDataProvider.cpp  UnitsDataProvider.h  UnitsFactory.cpp  UnitsFactory.h  UnitsFeature.cpp  UnitsFeature.h
src/IO/Events/: ErrorOccurred.hpp
src/IO/System/: EventLog.hpp
tests/: TestHelpers.hpp  commands_example_test.cpp  duel_and_ranged.txt  hunter_ranged_shot.txt  hunter_shadow_strike.txt  large_map_march.txt  mutual_kill.txt  single_unit.txt  small_map_duel.txt  two_pairs.txt
tests/expected/: commands_example_events.txt  duel_and_ranged_events.txt  hunter_ranged_shot_events.txt  hunter_shadow_strike_events.txt  large_map_march_events.txt  mutual_kill_events.txt  single_unit_events.txt  small_map_duel_events.txt  two_pairs_events.txt
(+24 files in other folders)
